[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/waterpump/WaterPump.gd" type="Script" id=1]
[ext_resource path="res://graphics/waterpump_graphics/water_pump_body_graphics.png" type="Texture" id=2]
[ext_resource path="res://graphics/waterpump_graphics/water_pump_piston_graphics.png" type="Texture" id=3]
[ext_resource path="res://graphics/waterpump_graphics/water_pump_indicator_green_graphics.png" type="Texture" id=4]
[ext_resource path="res://scenes/waterpump/Casing.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/waterpump/PumpBattery.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8.7336, 8.83767 )

[sub_resource type="Animation" id=3]

resource_name = "running_engine_animation"
length = 1.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Sprite_piston:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -7 ), Vector2( 8, -10 ), Vector2( 8, -7 ), Vector2( 8, -4 ), Vector2( 8, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/Sprite_green_indicator:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=4]

resource_name = "stop_engine_animation"
length = 1.0
loop = true
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Sprite_piston:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/Sprite_green_indicator:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]

resource_name = "animation_closing_engine_cover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Casing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Casing:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ) ]
}

[node name="WaterPump" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite_body" type="Sprite" parent="StaticBody2D" index="0"]

texture = ExtResource( 2 )

[node name="Sprite_piston" type="Sprite" parent="StaticBody2D" index="1"]

position = Vector2( 8, -7 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite_green_indicator" type="Sprite" parent="StaticBody2D" index="2"]

visible = false
texture = ExtResource( 4 )
offset = Vector2( -18.5, -17.5 )
_sections_unfolded = [ "Offset", "Visibility" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D" index="3"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -30.9149, -28.0154, -30.9149, 18.0011, -26.9907, 18.0011, -26.9907, 19.9632, -23.9922, 19.9632, -23.9922, 26.0034, -20.9914, 26.0034, -20.9914, 27.9271, -22.9535, 27.9271, -22.9535, 30.9664, -10.0087, 30.9664, -10.0189, 29.0043, 18.975, 28.9906, 18.975, 31.0325, 29.0006, 31.0325, 29.0006, 27.0253, 30.9659, 27.0253, 30.9659, 20.9762, 29.996, 20.9679, 30.0031, -23.9928, 24.0515, -23.9928, 24.0515, -25.9767, 20.9813, -25.9767, 20.9876, -31.0547, -21.9814, -31.0163, -21.9893, -30.016, -26.9137, -30.016, -26.9137, -28.0154 )

[node name="engine_compartment" type="Area2D" parent="StaticBody2D" index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/engine_compartment" index="0"]

visible = false
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Casing" parent="StaticBody2D" index="5" instance=ExtResource( 5 )]

_sections_unfolded = [ "Transform" ]

[node name="battery_compartment" type="Area2D" parent="StaticBody2D" index="6"]

position = Vector2( 0, -0.0788898 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/battery_compartment" index="0"]

visible = false
position = Vector2( -26.0054, 2.00471 )
scale = Vector2( 0.55469, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PumpBattery" parent="StaticBody2D" index="7" instance=ExtResource( 6 )]

position = Vector2( -25.4899, 2.02031 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayerEngine" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "running_engine_animation"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/running_engine_animation = SubResource( 3 )
anims/stop_engine_animation = SubResource( 4 )
blend_times = [  ]

[node name="AnimationPlayerCasing" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/animation_closing_engine_cover = SubResource( 5 )
anims/animation_opening_engine_cover = SubResource( 6 )
blend_times = [  ]

[connection signal="mouse_entered" from="StaticBody2D/engine_compartment" to="." method="_on_engine_compartment_mouse_entered"]

[connection signal="mouse_entered" from="StaticBody2D/battery_compartment" to="." method="_on_battery_compartment_mouse_entered"]

[connection signal="animation_finished" from="AnimationPlayerCasing" to="." method="_on_AnimationPlayerCasing_animation_finished"]


